--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -55,6 +55,7 @@
      		<div class="row">
 		        <label class="form-label col-md-4">请输入密码</label>
 		        <div class="col-md-6">
+					<!--name属性必须，不然好像校验不起作用-->
 		        	<input id="password" name="password" class="form-control" type="password"  placeholder="密码" required="true" minlength="6" maxlength="16" />
 
 				</div>
@@ -63,7 +64,7 @@
 	
 	<div class="row">
 		     	<div class="col-md-5">
-	       	 		<button class="btn btn-primary btn-block" type="reset" onclick="reset()">重置</button>
+	       	 		<button class="btn btn-primary btn-block" type="button" onclick="register()">注册</button>
 	       	 	</div>
 	       	 	<div class="col-md-5">
 	       	 		<button class="btn btn-primary btn-block" type="submit" onclick="login()">登录</button>
@@ -81,7 +82,7 @@ function login(){
 	$("#loginForm").validate({
         submitHandler:function(form){
              doLogin();
-        }    
+        }
     });
 }
 function doLogin(){
@@ -91,6 +92,8 @@ function doLogin(){
 	var salt = g_passsword_salt;
 	var str = ""+salt.charAt(1)+salt.charAt(4)+salt.charAt(5) + inputPass  + salt.charAt(3)+ salt.charAt(1);
 	var password = md5(str);
+
+	console.log(password);
 	$.ajax({
 		url: "/login/do-login",
 	    type: "POST",
@@ -113,6 +116,9 @@ function doLogin(){
 	    	layer.closeAll();
 	    }
 	});
+}
+function register() {
+	window.location.href="/register.htm"
 }
 </script>
 </html>
