--- a/src/main/resources/templates/manage.html
+++ b/src/main/resources/templates/manage.html
@@ -23,7 +23,7 @@
             width:100%;
         }
         body{
-            background:url('/img/bg3.png') no-repeat;
+            background:url('/img/bg2.png');
             background-size:100% 100%;
         }
         #productList td{
@@ -80,7 +80,7 @@
     </div>
 
 
-    <div th:class="row">
+    <div th:class="row" id="mainBody">
         <table class="table" id="productList">
             <tr id="head">
 
